     when exceptions occur during request processing, using HTTP::Body's
     ->cleanup feature. (RT#41442)
   - Ensure that Catalyst::Engine::HTTP's options hash is defined before
     dereferencing it. (RT#49267)
   - Fix regex special characters in REDIRECT_URL variable breaking
     the request base. (2nd part of RT#24951)

  New features:
   - Setting __PACKAGE__->config(enable_catalyst_header => 1); in your MyApp.pm
     now enables the X-Catalyst header being printed when not in debug mode.
   - Require CGI::Simple::Cookie version 1.109 to ensure support for the
     HttpOnly flag
   - Allow the myapp_test.pl script to be given a list of paths which it
     will retrieve all of. (RT#53653)

  Documentation:
   - The Catalyst::Test::get method is documented as returning the raw
     response bytes without any character decoding (RT#53678)

5.80022 2010-03-28 19:43:01

  New features:
   - Log an extra line in debug mode with the response status code,
     the content type and content length if available.

  Refactoring / optimizations:
   - Display of the end of hit debug messages has been factored out into
     log_headers, log_request, log_request_headers, log_response,
     log_response_status_line and log_response_headers methods so that
     plugins which customise how much information is shown on the debug
     screen as easy to write.
   - Make all logging of request and response state get the information from
     $c->dump_these so that there is a unified point from which to hook
     in parameter filtering (for example).
   - $c->model/view/controller have become a lot faster for non-regexp names
     by using direct hash lookup instead of looping.
   - IP address => hostname mapping for the server is only done once and cached
     by Catalyst::Engine::HTTP to somewhat mitigate the problem of people
     developing on machines pointed at slow DNS servers.

  Bugs fixed:
    - DispatchType::Index's uri_for_action only returns for actions registered