@@ -11,6 +11,7 @@
      dereferencing it. (RT#49267)
    - Fix regex special characters in REDIRECT_URL variable breaking
      the request base. (2nd part of RT#24951)
+   - Fix not stripping backslashes in DispatchType::Regex::uri_for_action
 
   New features:
    - Setting __PACKAGE__->config(enable_catalyst_header => 1); in your MyApp.pm
